--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "@types/react": "17.0.20",
     "@types/react-dom": "17.0.9",
+    "netlify-cli": "^8.15.3",
     "typescript": "4.4.2"
   },
   "scripts": {
